chrome ComponentInstalled dbus signal constant

Adding a constant for ComponentInstalled dbus signal. This signal is
emitted by chrome when a component is installed/updated and ready to be
mounted (by imageloader).

BUG=chromium:822902
TEST=None

Change-Id: Ib353dcfa3faed2866b2c98bae05948d460211f7c
Reviewed-on: https://chromium-review.googlesource.com/978869
Commit-Ready: Xiaochu Liu <xiaochu@chromium.org>
Tested-by: Xiaochu Liu <xiaochu@chromium.org>
Reviewed-by: Dan Erat <derat@chromium.org>